update swagger
add swagger config and modules
